--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h2{
+            color: blue;
+        }
+    </style>
     <title>Học Css</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h1 style="color: red;">Lê Minh Quân.</h1>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odio!</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odio!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odio!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odio!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odio!</p>
 </body>
 </html>
